--- a/site/shop/src/styles/common.css
+++ b/site/shop/src/styles/common.css
@@ -3,3 +3,8 @@
   margin: 0 auto;
   padding: 0 30px;
 }
+body {
+  background-image: url("./../img/bg.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+}
