--- a/site/shop/src/components/header/header.css
+++ b/site/shop/src/components/header/header.css
@@ -1,26 +1,34 @@
-.header {
-  background-image: url("./../../img/bg.png");
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
 .header__row {
-  margin-top: -45px;
-
   display: flex;
   align-items: center;
   column-gap: 150px;
 }
-.header__row h1 {
-  display: block;
+.tit1 {
   color: #fff;
-
-  font-family: Garamond;
   font-size: 96px;
-
   font-weight: 700;
+  font-family: "Garamond";
+  padding-top: 27px;
 }
+.tit2 {
+  text-align: center;
 
+  color: #fff;
+  font-family: Garamond;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.tit2 p {
+  display: inline;
+  color: #982e2e;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+}
 .header__actions {
   display: flex;
   column-gap: 20px;
